// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@bottom-tab-navigator: component checks * current index 1`] = `
<View
  appearance="default"
  currentIndex={1}
  dispatch={[Function]}
  routes={
    Array [
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen1",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen2",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen3",
      },
    ]
  }
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "backgroundColor": "transparent",
      "borderTopColor": "#A6AEBD",
      "borderTopWidth": 1,
      "color": "#8992A3",
      "highlightHeight": 3,
      "paddingVertical": 16,
      "selectedColor": "#3366FF",
      "showHighlight": false,
      "showText": false,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-0"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-1"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-2"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * different appearances 1`] = `
<View
  appearance="text"
  currentIndex={0}
  dispatch={[Function]}
  routes={
    Array [
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen1",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen2",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen3",
      },
    ]
  }
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "backgroundColor": "transparent",
      "borderTopColor": "#A6AEBD",
      "borderTopWidth": 1,
      "color": "#8992A3",
      "highlightHeight": 3,
      "paddingVertical": 16,
      "selectedColor": "#3366FF",
      "showHighlight": false,
      "showText": true,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-0"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#3366FF",
        }
      }
    >
      Screen1
    </Text>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-1"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
        }
      }
    >
      Screen2
    </Text>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-2"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
        }
      }
    >
      Screen3
    </Text>
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * different appearances 2`] = `
<View
  appearance="highlight"
  currentIndex={0}
  dispatch={[Function]}
  routes={
    Array [
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen1",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen2",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen3",
      },
    ]
  }
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "backgroundColor": "transparent",
      "borderTopColor": "#A6AEBD",
      "borderTopWidth": 1,
      "color": "#8992A3",
      "highlightHeight": 3,
      "paddingVertical": 16,
      "selectedColor": "#3366FF",
      "showHighlight": true,
      "showText": false,
    }
  }
>
  <View
    animationDuration={200}
    onLayout={[Function]}
    positions={3}
    selectedPosition={0}
    style={
      Object {
        "0": Object {
          "position": "absolute",
        },
        "1": Object {
          "backgroundColor": "#3366FF",
          "height": 3,
        },
        "backgroundColor": "#3366FF",
        "height": 3,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": "33.333333333333336%",
      }
    }
  />
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-0"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-1"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-2"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * different appearances 3`] = `
<View
  appearance="text-highlight"
  currentIndex={0}
  dispatch={[Function]}
  routes={
    Array [
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen1",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen2",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen3",
      },
    ]
  }
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "backgroundColor": "transparent",
      "borderTopColor": "#A6AEBD",
      "borderTopWidth": 1,
      "color": "#8992A3",
      "highlightHeight": 3,
      "paddingVertical": 16,
      "selectedColor": "#3366FF",
      "showHighlight": true,
      "showText": true,
    }
  }
>
  <View
    animationDuration={200}
    onLayout={[Function]}
    positions={3}
    selectedPosition={0}
    style={
      Object {
        "0": Object {
          "position": "absolute",
        },
        "1": Object {
          "backgroundColor": "#3366FF",
          "height": 3,
        },
        "backgroundColor": "#3366FF",
        "height": 3,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
        "width": "33.333333333333336%",
      }
    }
  />
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-0"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#3366FF",
        }
      }
    >
      Screen1
    </Text>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-1"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
        }
      }
    >
      Screen2
    </Text>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-2"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#8992A3",
        }
      }
    >
      Screen3
    </Text>
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * empty 1`] = `
<View
  appearance="default"
  currentIndex={0}
  dispatch={[Function]}
  routes={Array []}
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "backgroundColor": "transparent",
      "borderTopColor": "#A6AEBD",
      "borderTopWidth": 1,
      "color": "#8992A3",
      "highlightHeight": 3,
      "paddingVertical": 16,
      "selectedColor": "#3366FF",
      "showHighlight": false,
      "showText": false,
    }
  }
/>
`;

exports[`@bottom-tab-navigator: component checks * tab choose 1`] = `
<View
  appearance="default"
  currentIndex={0}
  dispatch={[Function]}
  onTabChoose={
    [MockFunction] {
      "calls": Array [
        Array [
          "Screen2",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  routes={
    Array [
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen1",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen2",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen3",
      },
    ]
  }
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "backgroundColor": "transparent",
      "borderTopColor": "#A6AEBD",
      "borderTopWidth": 1,
      "color": "#8992A3",
      "highlightHeight": 3,
      "paddingVertical": 16,
      "selectedColor": "#3366FF",
      "showHighlight": false,
      "showText": false,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-0"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-1"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-2"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`@bottom-tab-navigator: component checks * with routes 1`] = `
<View
  appearance="default"
  currentIndex={0}
  dispatch={[Function]}
  routes={
    Array [
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen1",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen2",
      },
      Object {
        "routeImage": <View
          style={
            Object {
              "backgroundColor": "red",
              "height": 20,
              "width": 20,
            }
          }
        />,
        "routeName": "Screen3",
      },
    ]
  }
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 750,
      },
      Object {
        "backgroundColor": "transparent",
        "borderTopColor": "#A6AEBD",
        "borderTopWidth": 1,
        "paddingVertical": 16,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
  themedStyle={
    Object {
      "backgroundColor": "transparent",
      "borderTopColor": "#A6AEBD",
      "borderTopWidth": 1,
      "color": "#8992A3",
      "highlightHeight": 3,
      "paddingVertical": 16,
      "selectedColor": "#3366FF",
      "showHighlight": false,
      "showText": false,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-0"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-1"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="@tab-navigator/tab-2"
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "height": 20,
          "marginBottom": 5,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;
